Implemented BIND_SONG_TITLES setting effect and migrated some parts to CollectionListener from direct method calls